# hoplite_verbs_rs

./: Cargo.toml
.github/workflows/: rust.yml
benches/: benchmarks.rs
src/: lib.rs  special_verbs.rs
testdata/: greek-infinitives.xml  greek-participles.xml  new.txt  pp.txt
