[package]
name = "hoplite_verbs_rs"
version = "0.3.8"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# polytonic-greek = { path = "../polytonic-greek" }
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.4.5" }
unicode-normalization = { version = "0.1.22", default-features = false }
unicode-segmentation = "1.10.0"

itertools = "0.10.5"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[lib]
doctest = false # don't run Doc-tests for now

[profile.release.package."*"] # +
opt-level = "z" # +
debug = false
