[package]
name = "hoplite_verbs_rs"
version = "0.4.6"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# polytonic-greek = { path = "../polytonic-greek" }
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.5.1" }
unicode-normalization = { version = "0.1.22", default-features = false }
unicode-segmentation = "1.10.1"

itertools = "0.12.1"
rand = "0.8.5"
tracing = "0.1.40"

[dev-dependencies]
criterion = "0.5.1"
quick-xml = "0.31.0"

[[bench]]
name = "benchmarks"
harness = false

[lib]
doctest = false # don't run Doc-tests for now

[profile.release.package."*"] # +
opt-level = "z" # +
debug = false
