[package]
name = "hoplite_verbs_rs"
version = "0.5.1"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# polytonic-greek = { path = "../polytonic-greek" }
# default-features = false means don't include unicode-normalization crate
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", default-features = false, version = "0.5.1" }

[dev-dependencies]
unicode-normalization = { version = "0.1.22", default-features = false }
criterion = "0.5.1"
quick-xml = "0.36.1"

[[bench]]
name = "benchmarks"
harness = false

[lib]
doctest = false # don't run Doc-tests for now

[profile.release.package."*"] # +
opt-level = "z" # +
debug = false
